--- a/views/404.html
+++ b/views/404.html
@@ -6,7 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        body{
+            background-color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: azure;
+        }
+    </style>
 </head>
 
 <body>
